# rustbot

./: .gitattributes  .gitignore  Cargo.toml
src/: lib.rs
src/graphql/: query.graphql  schema.json
