[package]
name = "rustbot"
version = "0.1.0"
authors = ["Tyler Mandry <tmandry@gmail.com>"]

[dependencies]
base64 = "0.9"
#curl = "0.4.0"
#failure = "0.1"
#failure_derive = "0.1"
rand = "0.4"
serde = "1.0"
#serde_json = "1.0"
serde_derive = "1.0"
url = "1.0"
oauth2 = "1.3.0"

actix = "0.5"
actix-web = "0.6"
env_logger = "0.5"

failure = "0.1"
graphql_client = "0.5"
reqwest = "0.9"
